refactor: :recycle: 重构顶栏代码

--- a/styles/common/css-var.scss
+++ b/styles/common/css-var.scss
@@ -18,8 +18,8 @@
   --b3-theme-on-primary: rgb(var(--text-anti));
   --b3-theme-on-secondary: rgb(var(--text-anti));
   --b3-theme-on-background: rgb(var(--text-primary));
-  --b3-theme-on-surface: rgb(var(--text-placeholder));
-  --b3-theme-on-surface-light: rgb(var(--text-placeholder));
+  --b3-theme-on-surface: rgb(var(--text-secondary));
+  --b3-theme-on-surface-light: rgb(var(--text-secondart));
   --b3-theme-on-error: rgb(var(--text-anti));
 
   // 线条
