--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,12 +1,13 @@
-
 @use "themes/tdesign";
 
+@use "common/css-var";
+
 @use "base";
+
+@use "layout";
 
 // @use "common";
 
 // @use "components";
-
-// @use "layout";
 
 // @use "pages";
