--- a/styles/themes/tdesign/light.scss
+++ b/styles/themes/tdesign/light.scss
@@ -1,5 +1,8 @@
 :root,
 :root[theme-mode="light"] {
+  --mode-btn: "暗黑";
+  --mode-after: "暗黑模式";
+
   --blue-1: 236, 242, 254;
   --blue-2: 212, 227, 252;
   --blue-3: 187, 211, 251;
