refactor: :recycle: 重构提示条代码

--- a/styles/common/var.scss
+++ b/styles/common/var.scss
@@ -34,8 +34,7 @@ $bg: add-color($bg, "bg", $bg-types);
 
 // fill
 $fill: () !default;
-$fill-types: "base", "page", "component", "popper", "brand";
-$fill: add-color($fill, "fill", $fill-types);
+$fill: add-color($fill, "fill", $bg-types);
 
 //圆角
 $radius: () !default;
